blog/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: cdub/comments
---
kind: Service
apiVersion: v1
metadata:
  name:  comments-clusterip-service
spec:
  selector:
    app:  comments
  ports:
  - name:  comments-service-port
    protocol: TCP
    port:  4001
    targetPort:  4001
