blog/infra/k8s/moderation.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: cdub/moderation
---
kind: Service
apiVersion: v1
metadata:
  name:  moderation-clusterip-service
spec:
  selector:
    app:  moderation
  ports:
  - name:  moderation-service-port
    protocol: TCP
    port:  4003
    targetPort:  4003
